<resources>
    <string name="app_name">Game of Life</string>
    <string name="save_success">Saved successfully</string>
    <string name="file_provider">com.matthewfortier.fileprovider</string>
    <string name="app_choose">Choose an app</string>
    <string name="filename_prefix">image</string>
    <string name="default_filename">image.png</string>
    <string name="animation_speed">Animation Speed</string>
    <string name="refresh_speed">Refresh Speed</string>
    <string name="pattern_name">Pattern Name</string>
    <string name="pattern_photo">Pattern Photo</string>
    <string name="save">Save</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="next">next</string>
    <string name="speed">Speed</string>
    <string name="clear">Clear</string>
    <string name="alive">Alive</string>
    <string name="dead">Dead</string>
    <string name="clone">Clone</string>
    <string name="initial_generation_value">Generation: 0</string>
    <string name="choose_color">Choose color</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="animation_speed_text">Animation Speed</string>
    <string name="animation_speed_interval">500ms - 3000ms</string>
    <string name="generation_subtitle_prefix">Generation: </string>
    <string name="database_pattern">pattern</string>
    <string name="database_directory">images/</string>
    <string name="database_directory_prefix">/images/</string>
    <string name="not_found">File not found</string>
    <string name="save_location">Save Location</string>
    <string name="to_disk">Save to disk</string>
    <string name="upload">Upload</string>
    <string name="patterns_directory">/Patterns</string>
    <string name="disk_success">File Successfully Saved to Disk</string>
    <string name="pattern">pattern</string>
    <string name="upload_unsuccessful">Upload Unsuccessful</string>
    <string name="list">List</string>
    <string name="share">Share</string>
    <string name="load">Load</string>
</resources>
