<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/start_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"/>

        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"/>

        <Button
            android:id="@+id/speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speed"/>

        <Button
            android:id="@+id/clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/alive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alive"/>

        <Button
            android:id="@+id/dead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dead"/>

        <Button
            android:id="@+id/clone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clone"/>

    </LinearLayout>

</LinearLayout>